gccida/c1/enter_macro_context
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cppmacro.c:1131:27: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
int  enter_macro_context( cpp_reader_0 *pfile, cpp_hashnode_0 *node) 
                          ^~~~~~~~~~~~
                          cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cppmacro.c:1131:48: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
int  enter_macro_context( cpp_reader_0 *pfile, cpp_hashnode_0 *node) 
                                               ^~~~~~~~~~~~~~
                                               cpp_hashnode
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cppmacro.c:1133:1: error: unknown type name 'cpp_macro_0'; did you mean 'cpp_macro'?
cpp_macro_0 *macro; // r15 
^~~~~~~~~~~
cpp_macro
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cpplib.h:43:26: note: 'cpp_macro' declared here
typedef struct cpp_macro cpp_macro;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cppmacro.c:1134:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v3; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cppmacro.c:1135:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v4; // rbp 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cppmacro.c:1156:45: error: expected expression
replace_args_0( pfile, node, ( macro_arg_0 *)v3->base); 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/cppmacro.c:1156:32: error: use of undeclared identifier 'macro_arg_0'
replace_args_0( pfile, node, ( macro_arg_0 *)v3->base); 
                               ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enter_macro_context/src/obj/cppmacro.o] Error 1
